# VoidDrop

./: .gitignore  LICENSE  README.md  main.py  package.json
.github/workflows/: release.yaml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
