[package]
name = "voiddrop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voiddrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastembed = "5.13.4"
anyhow = "1.0.102"
rusqlite = {version = "0.39.0", features = ["bundled"] }
sqlite-vec = "0.1.9"
chrono = "0.4.44"
pdf-extract = "0.10.0"
dotext = "0.1.1"
image = "0.25.10"
itertools = "0.14.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
bytemuck = "1.25.0"
tauri-plugin-single-instance = "2.4.2"

